# myscraper

./: Cargo.toml  README.md
src/: main.rs  models.rs
test_scraper/: Cargo.toml  TO-DO.txt
test_scraper/src/: main.rs  utils.rs
