[package]
name = "myscraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.9"
scraper = "0.12.0"
tokio = { version = "1.15.0", features = ["full"] }
regex = "1.5.4"
serde = { version = "1.0.113", features = ["derive"] }
serde_json = "1.0.74"
chrono = "0.4.19"
csv = "1.1.6"